03-object-management/07-services/03-ingress-egress/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      containers:
      - name: nginx-ingress
        image: nginx
        command: ["/bin/bash", "-c"]
        args:
          - |
            apt-get update && apt-get install -y curl && nginx -g 'daemon off;'
        ports:
        - containerPort: 8080
