03-object-management/07-services/03-ingress-egress/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-rules
spec:
  rules:
  - host: nginx-ingress.example.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: nginx-ingress-service
            port:
              number: 80
  - host: own-nginx-ingress.example.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: own-nginx-ingress-service
            port:
              number: 80
